--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -16,11 +16,11 @@
     <script src="javascript/calender/calendarDemo.js" type="text/javascript"></script>
     <div id="calender-show">
       <section id="directives-calendar" ng-controller="CalendarCtrl">
-        <div class="alert-success calAlert" ng-show="alertMessage != undefined && alertMessage != ''">
-          <h4>{{alertMessage}}</h4>
-        </div>
         <!-- <div ui-calendar="calendarOptions" ng-model="eventSources" calendar="myCalendar"></div> -->
         <div ui-calendar="uiConfig.calendar" ng-model="eventSources" calendar="myCalendar"></div>
+        <div class="alert-success" ng-show="alertMessage != undefined && alertMessage != ''">
+          <h4>{{alertMessage}}</h4>
+        </div>
       </section>
     </div>
 </head>
