--- a/MiraiConsultMVC/Views/appointments/Prepay.cshtml
+++ b/MiraiConsultMVC/Views/appointments/Prepay.cshtml
@@ -3,116 +3,223 @@
 @{
     Layout = "~/Views/Shared/_AskmiraiMasterLayout.cshtml";
 }
-
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Prepay for appointment</title>
-</head>
-<body>
-    <p/>
-    @if (Model != null) {
-        bool paid = Model.prepayamount > 0 && Model.ispaid.GetValueOrDefault();
-        if (paid)
-        {
-            <div class="row-fluid">
-                <div class="span12">
-                    <div class=" main-outter-padding toppaddingHome finddoc-title">
-                        This appointment has been paid for and confirmed.
-                    </div>
-                </div>
+<div class="main row-fluid">
+    <div class="span12 main-outter-padding">
+        <div class="row-fluid">
+            <div class="span12 cust-header-name-text">
+                <h5 class="title cust-header-main-text-title">Prepay for appointment</h5>
             </div>
-        }
-        else if(@Model.status == 1)
+        </div>
+        @if (Model != null)
         {
-            <div class="row-fluid">
-                <div class="span12">
-                    <div class=" main-outter-padding toppaddingHome finddoc-title">
-                        Appointment For @Model.patientname On @Model.starttime.ToString("MMMM dd, yyyy")
-                    </div>
-                    <div class="span1">&nbsp;</div>
-                </div>
-            </div>
-            <div class="row-fluid">
-                <div class="span1"></div>
-                <div class="span11">
-                    <a href="#" onclick="document.getElementById('cca_payment').submit();" class="book_appt_button pad10">Pay now</a>
-                </div>
-            </div>
-            <form id="cca_payment" method="post" name="redirect" action="@ViewBag.formDetails.cca_url">
-                <input type="hidden" id="encRequest" name="encRequest" value="@ViewBag.formDetails.cca_request" />
-                <input type="hidden" name="access_code" id="Hidden1" value="@ViewBag.formDetails.cca_accessCode" />
-            </form>
-        }
-        if (@Model.status != 1)
-        {
-            <div class="wrapper-bordered">
-                <div class="row-fluid">
-                    <div class="span1"></div>
-                    <div class="span10 alert-error alert" id="errorMessageDiv">
-                        <label id="lblErrorMessage" class="error_message_color msg_font font-bold">This link has expired.</label>
-                    </div>
-                    <div class="span1"></div>
-                </div>
-            </div>
-        }
-        else
-        {
-            <div class="row-fluid">
-                <div class="span1"></div>
-                <div class="span11 left doc-clinic-container">
-                    <div class="span10 doc-div-min-height">
-                        <div class="left loc-label doc-div-min-height span2"><h5>Doctor:</h5></div>
-                        <div class="span6 doc-div-min-height left doc-detail-word-break">                
-                            <h5>Dr. @ViewBag.doc.firstname @ViewBag.doc.lastname</h5>
+            bool paid = Model.prepayamount > 0 && Model.ispaid.GetValueOrDefault();
+            if (paid)
+            {
+                <div class="wrapper-bordered">
+                    <div class="row-fluid">
+                        <div class="row-fluid cust-padding-bw-row">
+                            <div class="span6 offset3 alert-success alert">
+                                <label class="success_message_color msg_font">This appointment has been paid for and confirmed.</label>
+                            </div>
                         </div>
                     </div>
-                    <div class="span10 doc-div-min-height margin-null">
-                        <div class="left loc-label doc-div-min-height span2">Date:</div>
-                        <div class="span6 doc-div-min-height left doc-detail-word-break">@Model.starttime.ToString("MMMM dd, yyyy")</div>
-                    </div>
-                    <div class="span10 doc-div-min-height margin-null">
-                        <div class="left loc-label doc-div-min-height span2">Time:</div>
-                        <div class="span6 doc-div-min-height left doc-detail-word-break">@Model.starttime.ToString("hh:mm tt") to @Model.endtime.ToString("hh:mm tt")</div>
-                    </div>
-                    <div class="span10 doc-div-min-height margin-null">
-                        <div class="left loc-label doc-div-min-height span2">Subject:</div>
-                        <div class="span6 doc-div-min-height left doc-detail-word-break">@Model.subject</div>
-                    </div>
-                    <div class="span10 doc-div-min-height margin-null">
-                        <div class="left loc-label doc-div-min-height span2">Clinic Name:</div>
-                        <div class="span6 doc-div-min-height left doc-detail-word-break">@Model.doclocation.clinicname</div>
-                    </div>
-                    <div class="span10 doc-div-min-height margin-null">
-                        <div class="left loc-label doc-div-min-height span2">Address:</div>
-                        <div class="span6 doc-div-min-height left doc-detail-word-break">@Model.doclocation.address</div>
-                    </div>
-                    <div class="span10 doc-div-min-height margin-null">
-                        <div class="left loc-label doc-div-min-height span2">Phone:</div>
-                        <div class="span6 doc-div-min-height left doc-detail-word-break">@Model.doclocation.telephone</div>
-                    </div>
-                    <div class="span10 doc-div-min-height margin-null">
-                        <div class="left loc-label doc-div-min-height span2">Doctor Fees:</div>
-                        <div class="span6 doc-div-min-height left doc-detail-word-break">@Model.prepayamount</div>
-                    </div>
-                    <div class="span10 doc-div-min-height margin-null">
-                        <div class="left loc-label doc-div-min-height span2">Booking Charges:</div>
-                        <div class="span6 doc-div-min-height left doc-detail-word-break">@Model.booking_charges()</div>
-                    </div>
-                    <div class="span10 doc-div-min-height margin-null">
-                        <div class="left loc-label doc-div-min-height span2">Total:</div>
-                        <div class="span6 doc-div-min-height left doc-detail-word-break">@Model.cca_amount</div>
-                    </div>
-                    @{var istDate = TimeZoneInfo.ConvertTimeFromUtc(@Model.prepay_by.GetValueOrDefault(), TimeZoneInfo.FindSystemTimeZoneById("India Standard Time"));}
-                    <div class="span10 doc-div-min-height margin-null">
-                        <div class="left loc-label doc-div-min-height span2">Pay By:</div>
-                        <div class="span6 doc-div-min-height left doc-detail-word-break">@istDate.ToString("MMMM dd, yyyy hh:mm tt")</div>
+                </div>
+            }
+            else if (@Model.status == 1)
+            {
+                <div class="row-fluid">
+                    <div class="span12">
+                        <div class=" main-outter-padding toppaddingHome finddoc-title">
+                            Appointment For @Model.patientname On @Model.starttime.ToString("MMMM dd, yyyy")
+                        </div>
+                        <div class="span1">&nbsp;</div>
                     </div>
                 </div>
-            </div>
-    }
+                <div class="row-fluid">
+                    <div class="span1"></div>
+                    <div class="span11">
+                        <a href="#" onclick="document.getElementById('cca_payment').submit();" class="book_appt_button pad10">Pay now</a>
+                    </div>
+                </div>
+                <form id="cca_payment" method="post" name="redirect" action="@ViewBag.formDetails.cca_url">
+                    <input type="hidden" id="encRequest" name="encRequest" value="@ViewBag.formDetails.cca_request" />
+                    <input type="hidden" name="access_code" id="Hidden1" value="@ViewBag.formDetails.cca_accessCode" />
+                </form>
+            }
+            if (@Model.status != 1)
+            {
+                <div class="wrapper-bordered">
+                    <div class="row-fluid">
+                        <div class="span1"></div>
+                        <div class="span10 alert-error alert" id="errorMessageDiv">
+                            <label id="lblErrorMessage" class="error_message_color msg_font font-bold">This link has expired.</label>
+                        </div>
+                        <div class="span1"></div>
+                    </div>
+                </div>
+            }
+            else
+            {
+                <div id="controlcontainer" class="wrapper-bordered cust-font-style">
+                    <div class="">
+                        <div class="row-fluid">
+                            <div class="row-fluid cust-padding-bw-row">
+                                <div class="span12 offset3">
+                                    <div class="span6 doc-div-min-height">
+                                        <div class="span4">
+                                            <label class="cust-font-style loc-label">Doctor:</label>
+                                        </div>
+                                        <div class="span8">
+                                            <label class="cust-no-border input-block-level contact_margin font-bold">Dr. @ViewBag.doc.firstname @ViewBag.doc.lastname</label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row-fluid">
+                            <div class="row-fluid cust-padding-bw-row">
+                                <div class="span12 offset3">
+                                    <div class="span6 doc-div-min-height">
+                                        <div class="span4">
+                                            <label class="cust-font-style loc-label">Date:</label>
+                                        </div>
+                                        <div class="span8">
+                                            <label class="cust-no-border input-block-level contact_margin font-bold">@Model.starttime.ToString("MMMM dd, yyyy")</label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row-fluid">
+                            <div class="row-fluid cust-padding-bw-row">
+                                <div class="span12 offset3">
+                                    <div class="span6 doc-div-min-height">
+                                        <div class="span4">
+                                            <label class="cust-font-style loc-label">Time:</label>
+                                        </div>
+                                        <div class="span8">
+                                            <label class="cust-no-border input-block-level contact_margin font-bold">@Model.starttime.ToString("hh:mm tt") to @Model.endtime.ToString("hh:mm tt")</label>
+                                        </div>                                        
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row-fluid">
+                            <div class="row-fluid cust-padding-bw-row">
+                                <div class="span12 offset3">
+                                    <div class="span6 doc-div-min-height">
+                                        <div class="span4">
+                                            <label class="cust-font-style loc-label">Subject:</label>
+                                        </div>
+                                        <div class="span8">
+                                            <label class="cust-no-border input-block-level contact_margin font-bold">@Model.subject</label>
+                                        </div>                                        
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row-fluid">
+                            <div class="row-fluid cust-padding-bw-row">
+                                <div class="span12 offset3">
+                                    <div class="span6 doc-div-min-height">
+                                        <div class="span4">
+                                            <label class="cust-font-style loc-label">Clinic Name:</label>
+                                        </div>
+                                        <div class="span8">
+                                            <label class="cust-no-border input-block-level contact_margin font-bold">@Model.doclocation.clinicname</label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row-fluid">
+                            <div class="row-fluid cust-padding-bw-row">
+                                <div class="span12 offset3">
+                                    <div class="span6 doc-div-min-height">
+                                        <div class="span4">
+                                            <label class="cust-font-style loc-label">Address:</label>
+                                        </div>
+                                        <div class="span8">
+                                            <label class="cust-no-border input-block-level contact_margin font-bold">@Model.doclocation.address</label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row-fluid">
+                            <div class="row-fluid cust-padding-bw-row">
+                                <div class="span12 offset3">
+                                    <div class="span6 doc-div-min-height">
+                                        <div class="span4">
+                                            <label class="cust-font-style loc-label">Phone:</label>
+                                        </div>
+                                        <div class="span8">
+                                            <label class="cust-no-border input-block-level contact_margin font-bold">@Model.doclocation.telephone</label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row-fluid">
+                            <div class="row-fluid cust-padding-bw-row">
+                                <div class="span12 offset3">
+                                    <div class="span6 doc-div-min-height">
+                                        <div class="span4">
+                                            <label class="cust-font-style loc-label">Doctor Fees:</label>
+                                        </div>
+                                        <div class="span8">
+                                            <label class="cust-no-border input-block-level contact_margin font-bold">@Model.prepayamount</label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row-fluid">
+                            <div class="row-fluid cust-padding-bw-row">
+                                <div class="span12 offset3">
+                                    <div class="span6 doc-div-min-height">
+                                        <div class="span4">
+                                            <label class="cust-font-style loc-label">Booking Charges:</label>
+                                        </div>
+                                        <div class="span8">
+                                            <label class="cust-no-border input-block-level contact_margin font-bold">@Model.booking_charges()</label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row-fluid">
+                            <div class="row-fluid cust-padding-bw-row">
+                                <div class="span12 offset3">
+                                    <div class="span6 doc-div-min-height">
+                                        <div class="span4">
+                                            <label class="cust-font-style loc-label">Total:</label>
+                                        </div>
+                                        <div class="span8">
+                                            <label class="cust-no-border input-block-level contact_margin font-bold">@Model.cca_amount</label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row-fluid">
+                            <div class="row-fluid cust-padding-bw-row">
+                                <div class="span12 offset3">
+                                    <div class="span6 doc-div-min-height">
+                                        <div class="span4">
+                                            <label class="cust-font-style loc-label">Pay By:</label>
+                                        </div>
+                                        <div class="span8">
+                                            @{var istDate = TimeZoneInfo.ConvertTimeFromUtc(@Model.prepay_by.GetValueOrDefault(), TimeZoneInfo.FindSystemTimeZoneById("India Standard Time"));}
+                                            <label class="cust-no-border input-block-level contact_margin font-bold">@istDate.ToString("MMMM dd, yyyy hh:mm tt")</label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            }
             if (!paid && @Model.status == 1)
             {
                 <div class="row-fluid">
@@ -122,10 +229,10 @@
                     </div>
                 </div>
             }
-    }
-    else
-    {
-        <h3>No such appointment found. Please call Mirai Health number for further help.</h3>
-    }
-</body>
-</html>
+        }
+        else
+        {
+            <h3>No such appointment found. Please call Mirai Health number for further help.</h3>
+        }
+    </div>
+</div>
