--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,26 +1,43 @@
 <html lang="en" ng-app="calendarDemoApp" id="top">
 <head>
-    <title>AngularUI Calendar for AngularJS</title>
-    <link rel="icon" href="img/favicon.ico" />
-    <link rel="stylesheet" href="bower_components/bootstrap-css/css/bootstrap.css" />
-    <link rel="stylesheet" href="bower_components/fullcalendar/dist/fullcalendar.css"/>
-    <link rel="stylesheet" href="css/calender/calendarDemo.css" />
-    <!-- jquery, moment, and angular have to get included before fullcalendar -->
-
-    <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-    <script type="text/javascript" src="bower_components/moment/min/moment.min.js"></script>
-    <script type="text/javascript" src="bower_components/fullcalendar/dist/fullcalendar.min.js"></script>
-    <script type="text/javascript" src="bower_components/fullcalendar/dist/gcal.js"></script>
-    <script src="javascript/calender/calendar.js"></script>
-    <script src="javascript/calender/calendarDemo.js" type="text/javascript"></script>
+  <title>AngularUI Calendar for AngularJS</title>
+  <div id="directives-calendar" ng-controller="CalendarCtrl">
     <div id="calender-show">
-      <section id="directives-calendar" ng-controller="CalendarCtrl">
-        <!-- <div ui-calendar="calendarOptions" ng-model="eventSources" calendar="myCalendar"></div> -->
-        <div ui-calendar="uiConfig.calendar" ng-model="eventSources" calendar="myCalendar"></div>
-        <div class="alert-success" ng-show="alertMessage != undefined && alertMessage != ''">
-          <h4>{{alertMessage}}</h4>
+      <link rel="icon" href="img/favicon.ico" />
+      <link rel="stylesheet" href="bower_components/bootstrap-css/css/bootstrap.css" />
+      <link rel="stylesheet" href="bower_components/fullcalendar/dist/fullcalendar.css"/>
+      <link rel="stylesheet" href="css/calender/calendarDemo.css" />
+      <!-- jquery, moment, and angular have to get included before fullcalendar -->
+      <!-- <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.js"></script> -->
+      <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
+      <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+      <script type="text/javascript" src="bower_components/moment/min/moment.min.js"></script>
+      <script type="text/javascript" src="bower_components/fullcalendar/dist/fullcalendar.min.js"></script>
+      <script type="text/javascript" src="bower_components/fullcalendar/dist/gcal.js"></script>
+      <script src="javascript/calender/calendar.js"></script>
+      <script src="javascript/calender/calendarDemo.js" type="text/javascript"></script>
+      <script type="text/ng-template" id="myModalContent.html">
+        <div class="modal-header">
+          <h3 class="modal-title">Im a modal!</h3>
         </div>
-      </section>
+        <div class="modal-body">
+          <ul>
+            <li ng-repeat="item in items">
+              <a ng-click="selected.item = item">{{ item }}</a>
+            </li>
+          </ul>
+          Selected: <b>{{ selected.item }}</b>
+        </div>
+        <div class="modal-footer">
+          <button class="btn btn-primary" ng-click="ok()">OK</button>
+          <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+        </div>
+      </script>
+      <!-- <div ui-calendar="calendarOptions" ng-model="eventSources" calendar="myCalendar"></div> -->
+      <!-- <div class="alert-success" ng-show="alertMessage != undefined && alertMessage != ''">
+        <h4>{{alertMessage}}</h4>
+      </div> -->
+      <div ui-calendar="uiConfig.calendar" ng-model="eventSources" calendar="myCalendar"></div>
     </div>
+  </div>
 </head>
