--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,7 +8,6 @@
       <link rel="stylesheet" href="bower_components/fullcalendar/dist/fullcalendar.css"/>
       <link rel="stylesheet" href="css/calender/calendarDemo.css" />
       <!-- jquery, moment, and angular have to get included before fullcalendar -->
-      <!-- <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.js"></script> -->
       <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
       <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
       <script type="text/javascript" src="bower_components/moment/min/moment.min.js"></script>
@@ -21,13 +20,13 @@
           <h3 class="modal-title">Im a modal!</h3>
         </div>
         <div class="modal-body">
-          <ul>
+          <!-- <ul>
             <li ng-repeat="item in items">
               <a ng-click="selected.item = item">{{ item }}</a>
             </li>
           </ul>
           Selected: <b>{{ selected.item }}</b>
-        </div>
+        </div> -->
         <div class="modal-footer">
           <button class="btn btn-primary" ng-click="ok()">OK</button>
           <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
