--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -24,9 +24,9 @@
             <li ng-repeat="item in items">
               <a ng-click="selected.item = item">{{ item }}</a>
             </li>
-          </ul>
-          Selected: <b>{{ selected.item }}</b>
-        </div> -->
+          </ul> -->
+          Selected: <b>{{ selected.start }}</b>
+        </div>
         <div class="modal-footer">
           <button class="btn btn-primary" ng-click="ok()">OK</button>
           <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
