--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,17 +15,85 @@
       <script type="text/javascript" src="bower_components/fullcalendar/dist/gcal.js"></script>
       <script src="javascript/calender/calendar.js"></script>
       <script src="javascript/calender/calendarAppointmentBook.js" type="text/javascript"></script>
+      <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
       <script type="text/ng-template" id="appointmentBooking.html">
         <div class="modal-header">
-          <h6 class="modal-title">Book Appointment!</h6>
+          <div class="modal-title">Book Appointment</div>
         </div>
         <div class="modal-body">
-          <!-- <ul>
-            <li ng-repeat="item in items">
-              <a ng-click="selected.item = item">{{ item }}</a>
-            </li>
-          </ul> -->
-          Selected: <b>{{ selected_event.start }}</b>
+          <form class="form-horizontal" role="form">
+            <div class="form-group">
+              <label class="col-sm-4 control-label">Appointment For:</label>
+              <div class="col-sm-8">
+                <label class="radio-inline"> <input type="radio" ng-model="radioAppointment.selected_type" ng-value=1 ng-change="changeType()"> Doctor </label>
+                <label class="radio-inline"> <input type="radio" ng-model="radioAppointment.selected_type" ng-init="radioAppointment.selected_type = 2" ng-value=2 ng-change="changeType()"> Patient </label>
+              </div>
+            </div>
+            <div ng-show="showPatient">
+              <div class="form-group">
+                <label class="control-label col-lg-1" for="name">Patient Name: *</label>
+                <div class="col-lg-8">
+                  <input type="text" class="form-control" id="patientName" ng-model="patientName" placeholder="Name">
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="control-label col-lg-1" for="number">Monile Number: *</label>
+                <div class="col-lg-8">
+                  <input type="number" class="form-control" id="patientNumber" ng-model="patientNumber" placeholder="1234">
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="control-label col-sm-1" for="email">Email: </label>
+                <div class="col-sm-8">
+                  <input type="email" class="form-control" id="patientEmail"  ng-model="patientEmail" placeholder="my.email@mirai.com">
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="control-label col-lg-1" for="date">Date Selected: </label>
+                <div class="col-lg-8">
+                  <input type="text" class="form-control" ng-model="dateSelected" ng-disabled=true>
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="control-label col-lg-1" for="name">Subject: </label>
+                <div class="col-lg-8">
+                  <input type="text" class="form-control" id="subjectSelected" ng-model="subjectSelected" placeholder="Brief Description">
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="control-label col-lg-1" for="name">Pre-pay: </label>
+                <div class="col-lg-8">
+                  <input id="prepay" class="checkbox-inline" type="checkbox" name="need_pre_pay" value="" ng-model="paymentSelected">
+                  <i class="fa fa-inr"></i>
+                  <input type="text" class="form-control pay-amount" placeholder="0.0" maxlength="8" ng-model="prepayAmount"> by
+                  <input type="text" class="form-control pay-amount-by" ng-model="prepayAmountBy">
+                </div>
+              </div>
+              <!-- Patient div ends here -->
+            </div>
+            <div ng-show="!showPatient">
+              <div class="form-group">
+                <label class="control-label col-lg-1" for="date">Date Selected: </label>
+                <div class="col-lg-8">
+                  <input type="text" class="form-control" ng-model="dateSelected" ng-disabled=true>
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="control-label col-lg-1" for="name">Subject: </label>
+                <div class="col-lg-8">
+                  <input type="text" class="form-control" id="subjectSelected" ng-model="subjectSelected" placeholder="Brief Description">
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="control-label col-lg-2" for="name">Appointment Type*</label>
+                <div class="col-lg-8">
+                  <select class="form-control" ng-model="updatedObject.baseCurrencyCode" ng-options="value.id as value.label group by value.group for value in myOptions" convert-to-number>
+                  </select>
+                </div>
+              </div>
+            </div>
+          </form>
+          <!-- Selected: <b>{{ selected_event.start }}</b> -->
         </div>
         <div class="modal-footer">
           <button class="btn btn-primary" ng-click="ok()">OK</button>
