--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -16,6 +16,7 @@
       <script src="javascript/calender/calendar.js"></script>
       <script src="javascript/calender/calendarAppointmentBook.js" type="text/javascript"></script>
       <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+      <!-- <link href="css/calender/font-awesome.css" rel="stylesheet"> -->
       <script type="text/ng-template" id="appointmentBooking.html">
         <div class="modal-header">
           <div class="modal-title">Book Appointment</div>
@@ -87,7 +88,7 @@
               <div class="form-group">
                 <label class="control-label col-lg-2" for="name">Appointment Type*</label>
                 <div class="col-lg-8">
-                  <select class="form-control" ng-model="updatedObject.baseCurrencyCode" ng-options="value.id as value.label group by value.group for value in myOptions" convert-to-number>
+                  <select ng-init="updatedObject = appointmentTypes[0].id" class="form-control" ng-model="updatedObject" ng-options="value.id as value.label group by value.group for value in appointmentTypes" convert-to-number>
                   </select>
                 </div>
               </div>
