Added elmah for logging on production. Fixed other detail of doctor profile is not getting updated. Fixed telephone number is not getting updated in clinic address. Added url column in  doctorlocations table. Added website in doctorpublic proofile.

--- a/MiraiConsultMVC/Views/Doctors/DoctorProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/DoctorProfile.cshtml
@@ -1420,7 +1420,7 @@
                         var regex = /(<([^>]+)>)/ig
                        , body = telphoneno
                        , result = body.replace(regex, "");
-                        document.getElementById("txtTelephoneNo").value = result;
+                        document.getElementById("txtTelephoneNo").value = aData[11];
                         document.getElementById("txtAddress").value = aData[8];
                         document.getElementById("hdnDocLocationId").value = aData[0];
                         document.getElementById("hiddenCountryId").value = aData[2];
