--- a/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
@@ -133,6 +133,16 @@
                                                     <div class="left loc-label doc-div-min-height span4">Phone:</div>
                                                     <div class="span7 doc-div-min-height left doc-detail-word-break">@location.Telephone</div>
                                                 </div>
+                                                <div class="span12 doc-div-min-height margin-null">
+                                                    <div class="left loc-label doc-div-min-height span4">Website:</div>
+                                                       @{
+                                                         string url = string.Empty;
+                                                         if(!string.IsNullOrEmpty(location.Url))
+                                                         {
+                                                           url = location.Url.Contains("http://") ? location.Url : "http://" + location.Url;
+                                                         }
+                                                    <div class="span7 doc-div-min-height left doc-detail-word-break"><a href="@url" class="aLink" target="_blank">@location.Url</a></div>}
+                                                </div>
                                             </div>
                                             if (count != Model.locations.Count)
                                             {
@@ -171,6 +181,16 @@
                                                 <div class="span12 doc-div-min-height margin-null">
                                                     <div class="left loc-label doc-div-min-height span4">Phone:</div>
                                                     <div class="span7 doc-div-min-height left doc-detail-word-break">@location.Telephone</div>
+                                                <div class="span12 doc-div-min-height margin-null">
+                                                    <div class="left loc-label doc-div-min-height span4">Website:</div>
+                                                    @{
+                                                         string url = string.Empty;
+                                                         if(!string.IsNullOrEmpty(location.Url))
+                                                         {
+                                                           url = location.Url.Contains("http://") ? location.Url : "http://" + location.Url;
+                                                         }
+                                                    <div class="span7 doc-div-min-height left doc-detail-word-break"><a href="@url" class="aLink" target="_blank">@location.Url</a></div>}
+                                                </div>
                                                 </div>
                                             </div>
                                         }
@@ -248,6 +268,16 @@
                                                     <div class="left loc-label doc-div-min-height span4">Phone:</div>
                                                     <div class="span7 doc-div-min-height left doc-detail-word-break">@location.Telephone</div>
                                                 </div>
+                                                <div class="span12 doc-div-min-height margin-null">
+                                                    <div class="left loc-label doc-div-min-height span4">Website:</div>
+                                                     @{
+                                                         string url = string.Empty;
+                                                         if(!string.IsNullOrEmpty(location.Url))
+                                                         {
+                                                           url = location.Url.Contains("http://") ? location.Url : "http://" + location.Url;
+                                                         }
+                                                    <div class="span7 doc-div-min-height left doc-detail-word-break"><a href="@url" class="aLink" target="_blank">@location.Url</a></div>}
+                                                </div>
                                             </div>
                                             if (count != Model.locations.Count)
                                             {
@@ -286,6 +316,16 @@
                                                 <div class="span12 doc-div-min-height margin-null">
                                                     <div class="left loc-label doc-div-min-height span4">Phone:</div>
                                                     <div class="span7 doc-div-min-height left doc-detail-word-break">@location.Telephone</div>
+                                                </div>
+                                                <div class="span12 doc-div-min-height margin-null">
+                                                    <div class="left loc-label doc-div-min-height span4">Website:</div>
+                                                     @{
+                                                         string url = string.Empty;
+                                                         if(!string.IsNullOrEmpty(location.Url))
+                                                         { 
+                                                           url = location.Url.Contains("http://") ? location.Url : "http://" + location.Url;
+                                                         }
+                                                    <div class="span7 doc-div-min-height left doc-detail-word-break"><a href="@url" class="aLink" target="_blank">@location.Url</a></div>}
                                                 </div>
                                             </div>
                                             if (count != Model.locations.Count)
