--- a/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
@@ -55,8 +55,7 @@
                                         || HttpContext.Current.Request.Url.AbsoluteUri.ToLower().Contains("questiondetails") || HttpContext.Current.Request.Url.AbsoluteUri.ToLower().Contains("similar-questions")
                                         || HttpContext.Current.Request.Url.AbsoluteUri.ToLower().Contains("forgot-password") || HttpContext.Current.Request.Url.AbsoluteUri.ToLower().Contains("answers")
                                         || HttpContext.Current.Request.Url.AbsoluteUri.ToLower().Contains("topics") || HttpContext.Current.Request.Url.AbsoluteUri.ToLower().Contains("reset-password")
-                                        || Session["seoQuestionText"] != null || HttpContext.Current.Request.Url.AbsoluteUri.ToLower().Contains("doctor")
-                                        || HttpContext.Current.Request.Url.AbsoluteUri.ToLower().Contains("a"))
+                                        || Session["seoQuestionText"] != null || HttpContext.Current.Request.Url.AbsoluteUri.ToLower().Contains("doctor"))                                        
                                     {
                                         Session["seoQuestionText"] = null;
                                             <div class="pull-right">
@@ -69,7 +68,7 @@
                                     else if (HttpContext.Current.Request.Url.AbsoluteUri.ToLower().Equals(ConfigurationManager.AppSettings["defaultUrl"].ToString())
                                     || HttpContext.Current.Request.Url.AbsoluteUri.ToLower().Contains("login") || HttpContext.Current.Request.Url.AbsoluteUri.ToLower().Contains("contact-us")
                                     || HttpContext.Current.Request.Url.AbsoluteUri.ToLower().Contains("terms-of-use") || HttpContext.Current.Request.Url.AbsoluteUri.ToLower().Contains("privacy-policy")
-                                    || HttpContext.Current.Request.Url.AbsoluteUri.ToLower().Contains("how-we-works"))
+                                    || HttpContext.Current.Request.Url.AbsoluteUri.ToLower().Contains("how-we-works") || HttpContext.Current.Request.Url.AbsoluteUri.ToLower().Contains("a"))
                                     {
                                         <div class="row-fluid">
                                             <div style="float:left">
