Changed json data to post while creating appointment and done changes to show required data on created appointment

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -123,7 +123,8 @@
                   <div class="form-group">
                     <label class="control-label col-lg-2" for="name">Appointment Type*</label>
                     <div class="col-lg-8">
-                      <select ng-init="updatedObject = appointmentTypes[0].id" class="form-control" ng-model="updatedObject" ng-options="value.id as value.label group by value.group for value in appointmentTypes" convert-to-number>
+                      <select ng-init="updatedObject = updatedObject[0]" class="form-control" ng-model="updatedObject" ng-options="value as value.label group by value.group for value in appointmentTypes" convert-to-number>
+                        <option value="" ng-model="updatedObject">{{updatedObject.label}}</option>
                       </select>
                     </div>
                   </div>
@@ -219,7 +220,8 @@
                   <div class="form-group">
                     <label class="control-label col-lg-2" for="name">Appointment Type*</label>
                     <div class="col-lg-8">
-                      <select class="form-control" ng-model="updatedObject" ng-options="value.id as value.label group by value.group for value in appointmentTypes" convert-to-number>
+                      <select class="form-control" ng-model="updatedObject" ng-options="value as value.label group by value.group for value in appointmentTypes" convert-to-number>
+                        <option value="" ng-model="updatedObject">{{updatedObject}}</option>
                       </select>
                     </div>
                   </div>
