--- a/public/css/posts/BookAppointment.css
+++ b/public/css/posts/BookAppointment.css
@@ -50,3 +50,18 @@
 .validation-msg-color {
   color: red;
 }
+
+.tooltip-inner {
+  background-color: rgb(239, 32, 32);
+  height: 35px;
+  padding-top: 10px;
+}
+
+.tooltip-arrow {
+  display: none !important;
+}
+
+.tooltip.top {
+  margin-top: 45px;
+  margin-left: 299px;
+}
