Updated bower.json for bootstrap packages. Latest code drop from Poorva.

--- a/MiraiConsultMVC/Views/PA/PAHome.cshtml
+++ b/MiraiConsultMVC/Views/PA/PAHome.cshtml
@@ -4,23 +4,24 @@
     Layout = null;
 }
     <title>AngularUI Calendar for AngularJS</title>
-
+    <!-- CSS -->
     <link rel="icon" href="img/favicon.ico" />
-    <script src="~/Bower/components/angular/angular.min.js"></script>
-    <link href="~/Bower/components/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
-    <link href="~/Bower/components/fullcalendar/dist/fullcalendar.css" rel="stylesheet" />
+    <link href="~/Bower/components/bootstrap-css/css/bootstrap.css" rel="stylesheet" />
+    <link href="~/Bower/components/fullcalendar/dist/fullcalendar.min.css" rel="stylesheet" />
     <link href="~/Content/calendar/BookAppointment.css" rel="stylesheet" />
     <link href="~/Bower/components/angular-flash-alert/dist/angular-flash.min.css" rel="stylesheet" />
-    <!-- jquery, moment, and angular have to get included before fullcalendar -->
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet" />
+    
+    <!-- Javascripts -->
+    <script src="~/Bower/components/angular/angular.min.js"></script>
     <script src="~/Bower/components/jquery/dist/jquery.min.js"></script>
     <script src="~/Bower/components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="~/Bower/components/moment/min/moment.min.js"></script>
-    <script type="text/javascript" src="~/Bower/components/fullcalendar/dist/fullcalendar.min.js"></script>
-    <script type="text/javascript" src="~/Bower/components/fullcalendar/dist/gcal.js"></script>
+    <script src="~/Bower/components/fullcalendar/dist/fullcalendar.min.js"></script>
+    <script src="~/Bower/components/fullcalendar/dist/gcal.js"></script>
     <script src="~/Bower/components/angular-ui-calendar/src/calendar.js"></script>
-    <script type="text/javascript" src="~/Content/js/underscore-min.js"></script>
-    <script type="text/javascript" src="~/Content/js/angular-underscore.min.js"></script>
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+    <script src="~/Bower/components/underscore/underscore-min.js"></script>
+    <script src="~/Bower/components/angular-underscore/angular-underscore.min.js"></script>
     <script src="~/Content/calendar/doctorLocationFetch.js"></script>
     <script src="~/Content/calendar/BookAppointment.js"></script>
     <script src="~/Content/calendar/BookAppointmentModal.js"></script>
