--- a/public/css/posts/BookAppointment.css
+++ b/public/css/posts/BookAppointment.css
@@ -51,3 +51,11 @@
 .validation-msg-color {
   color: red;
 }
+
+/*.fc-agendaWeek-view tr {
+    height: 40px;
+}
+
+.fc-agendaDay-view tr {
+    height: 40px;
+}*/
