--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -71,9 +71,10 @@
                   <div class="form-group">
                     <label class="control-label col-lg-1" for="number">Mobile Number: *</label>
                     <div class="col-lg-8">
-                      <input type="number" class="form-control" name="mobile_number" ng-click="submitted = false" id="patientNumber" ng-model="patientNumber" placeholder="1234" required>
+                      <input type="number" class="form-control" name="mobile_number" ng-click="submitted = false" id="patientNumber" ng-model="patientNumber" placeholder="1234" required ng-minlength=8 ng-maxlength=10>
                       <span class="error validation-msg-color" ng-show="appointmentForm.mobile_number.$error.required" ng-if='appointmentForm.mobile_number.$dirty'>Please Enter Mobile Number !</span>
                       <span class="error validation-msg-color" ng-show="appointmentForm.mobile_number.$error.number">Please Enter Valid Mobile Number !</span>
+                      <span class="error validation-msg-color" ng-show="appointmentForm.mobile_number.$error.minlength || appointmentForm.mobile_number.$error.maxlength">Mobile Number should be 8 to 10 number</span>
                     </div>
                   </div>
                   <div class="form-group">
