Fixed - For mobile devices, some lables are not shown on selection of past appt

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -154,7 +154,7 @@
                     </div>
                   </div>
                   <div class="form-group">
-                    <label class="control-label col-lg-1" for="number">Monile Number: *</label>
+                    <label class="control-label col-lg-1" for="number">Mobile Number: *</label>
                     <div class="col-lg-8">
                       <input type="number" class="form-control" id="patientNumber" ng-model="patientNumber" ng-disabled="true">
                     </div>
@@ -249,40 +249,40 @@
                   <div class="form-group">
                     <label class="control-label col-lg-1" for="name">Patient Name: *</label>
                     <div class="col-lg-8">
-                      <div class="form-control" id="patientName" ng-model="patientName">{{patientName}}</div>
+                      <input class="form-control" id="patientName" ng-model="patientName" ng-disabled="true">
                     </div>
                   </div>
                   <div class="form-group">
-                    <label class="control-label col-lg-1" for="number">Monile Number: *</label>
+                    <label class="control-label col-lg-1" for="number">Mobile Number: *</label>
                     <div class="col-lg-8">
-                      <div class="form-control" id="patientNumber" ng-model="patientNumber">{{patientNumber}}</div>
+                      <input class="form-control" id="patientNumber" ng-model="patientNumber" ng-disabled="true">
                     </div>
                   </div>
                   <div class="form-group">
                     <label class="control-label col-sm-1" for="email">Email: </label>
                     <div class="col-sm-8">
-                      <div class="form-control" id="patientEmail"  ng-model="patientEmail">{{patientEmail}}</div>
+                      <input class="form-control" id="patientEmail"  ng-model="patientEmail" ng-disabled="true">
                     </div>
                   </div>
                   <div class="form-group">
                     <label class="control-label col-lg-1" for="name">Date: *</label>
                     <div class="col-lg-8">
-                      <div class="form-control" id="dateSelectedToEdit" ng-model="dateSelectedToEdit">{{dateSelectedToEdit}}</div>
+                      <input class="form-control" id="dateSelectedToEdit" ng-model="dateSelectedToEdit" ng-disabled="true">
                     </div>
                   </div>
                   <div class="form-group">
                     <label class="control-label col-lg-1" for="name">Time: *</label>
                     <div class="col-lg-4">
-                      <div class="form-control" id="fromTimeEdit" ng-model="fromTimeEdit">{{fromTimeEdit}}</div>
+                      <input class="form-control" id="fromTimeEdit" ng-model="fromTimeEdit" ng-disabled="true">
                     </div>
                     <div class="col-lg-4">
-                      <div class="form-control" id="toTimeEdit" ng-model="toTimeEdit">{{toTimeEdit}}</div>
+                      <input class="form-control" id="toTimeEdit" ng-model="toTimeEdit" ng-disabled="true">
                     </div>
                   </div>
                   <div class="form-group">
                     <label class="control-label col-lg-1" for="name">Subject: </label>
                     <div class="col-lg-8">
-                      <div class="form-control" id="subjectSelected" ng-model="subjectSelected">{{subjectSelected}}</div>
+                      <input class="form-control" id="subjectSelected" ng-model="subjectSelected" ng-disabled="true">
                     </div>
                   </div>
                   <div class="form-group">
@@ -300,22 +300,22 @@
                   <div class="form-group">
                     <label class="control-label col-lg-1" for="name">Date: *</label>
                     <div class="col-lg-8">
-                      <div class="form-control" id="dateSelectedToEdit">{{dateSelectedToEdit}}</div>
+                      <input class="form-control" id="dateSelectedToEdit" ng-model="dateSelectedToEdit" ng-disabled="true">
                     </div>
                   </div>
                   <div class="form-group">
                     <label class="control-label col-lg-1" for="name">Time: *</label>
                     <div class="col-lg-4">
-                      <div class="form-control" id="fromTimeEdit" ng-model="fromTimeEdit">{{fromTimeEdit}}</div>
+                      <input class="form-control" id="fromTimeEdit" ng-model="fromTimeEdit" ng-disabled="true">
                     </div>
                     <div class="col-lg-4">
-                      <div class="form-control" id="toTimeEdit" ng-model="toTimeEdit">{{toTimeEdit}}</div>
+                      <input class="form-control" id="toTimeEdit" ng-model="toTimeEdit" ng-disabled="true">
                     </div>
                   </div>
                   <div class="form-group">
                     <label class="control-label col-lg-1" for="name">Subject: </label>
                     <div class="col-lg-8">
-                      <div class="form-control" id="subjectSelected" ng-model="subjectSelected">{{subjectSelected}}</div>
+                      <input class="form-control" id="subjectSelected" ng-model="subjectSelected" ng-disabled="true">
                     </div>
                   </div>
                   <div class="form-group">
