--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -51,7 +51,7 @@
       </div>
     </div>
   </div>
-  <div class="row-fluid">
+  <div class="row-fluid search_box">
     <div id="directives-calendar" ng-controller="BookAppointmentCtrl">
       <div ng-show="showCalendar">
         <div id="calender-show">
@@ -183,7 +183,7 @@
                       <div class="row">
                         <div class="col-lg-6">
                           <p class="input-group">
-                            <input type="date" class="date-time-picker-size date-picker-left-margin date-picker-text-indent" id="dateSelectedToEdit" datepicker-popup ng-model="current_date" datepicker-options="dateOptions" ng-required="true" />
+                            <input type="date" class="form-control" id="dateSelectedToEdit" datepicker-popup ng-model="current_date" datepicker-options="dateOptions" ng-required="true" />
                           </p>
                         </div>
                       </div>
@@ -207,11 +207,11 @@
                     <label class="control-label col-sm-3" for="name">Pre-pay: </label>
                     <div class="col-sm-9" id="pre-pay-size">
                       <input id="prepay" class="checkbox-inline" type="checkbox" name="need_pre_pay" value="" ng-model="paymentSelected">
-                      <i class="fa fa-inr"></i>
+                      <i class="fa fa-inr" ng-class="check_if_paid"></i>
                       <input type="text" class="form-control pay-amount" placeholder="0.0" maxlength="8" ng-model="prepayAmount"> by
-                      <input type="date" class="prepay-date-size date-picker-text-indent" id="dateSelectedToEdit" datepicker-popup ng-model="prepay_date"
+                      <input type="date" class="form-control prepay-date-size date-picker-text-indent" id="dateSelectedToEdit" datepicker-popup ng-model="prepay_date"
                       datepicker-options="dateOptions" ng-required="true" />
-                      <input type="text" class="prepay-time-size time-picker-text-indent" placeholder="Time" id="fromTimeEdit" dn-timepicker ng-model="prepay_time" step="{{slot}}" />
+                      <input type="text" class="form-control prepay-time-size time-picker-text-indent" placeholder="Time" id="fromTimeEdit" dn-timepicker ng-model="prepay_time" step="{{slot}}" />
                     </div>
                   </div>
                   <!-- Patient div ends here -->
@@ -314,7 +314,8 @@
                       <input id="prepay" class="checkbox-inline" type="checkbox" name="need_pre_pay" value="" ng-model="paymentSelected" ng-disabled="true">
                       <i class="fa fa-inr"></i>
                       <input type="text" class="form-control pay-amount" placeholder="0.0" maxlength="8" ng-model="prepayAmount" ng-disabled="true"> by
-                      <input type="text" class="form-control pay-amount-by-non-edit" ng-model="prepayAmountBy" ng-disabled="true">
+                      <input type="text" class="form-control pay-amount-by-non-edit prepay-past-date-size" ng-model="dateSelectedToEdit" ng-disabled="true">
+                      <input type="text" class="form-control pay-amount-by-non-edit prepay-past-time-size" ng-model="fromTimeEdit" ng-disabled="true">
                     </div>
                   </div>
                   <!-- Patient div ends here -->
@@ -365,4 +366,5 @@
         </div>
       </div>
     </div>
+  </div>
 </body>
