Appointment deletion - confirmation dialog added - height of modal body in vh

--- a/public/css/posts/BookAppointment.css
+++ b/public/css/posts/BookAppointment.css
@@ -116,7 +116,7 @@ input::-webkit-inner-spin-button {
 
 .bootbox .modal-body
 {
-  height: 70px !important;
+  height: 10vh;
 }
 
 .bootbox .btn-ok
