Added range validation for timepicker

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -25,8 +25,8 @@
   <script src="javascript/lib/angular-flash.min.js"></script>
   <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
   <script type="text/javascript" src="bower_components/angular-ui-select/dist/select.js"></script>
-  <script src="bower_components/angular-dateparser/dist/angular-dateparser.js"></script>
-  <script src="bower_components/angular-timepicker/src/angular-timepicker.js"></script>
+  <script type="text/javascript" src="bower_components/angular-dateparser/dist/angular-dateparser.js"></script>
+  <script type="text/javascript" src="bower_components/angular-timepicker/src/angular-timepicker.js"></script>
   <script type="text/javascript" src="javascript/lib/bootbox.min.js"></script>
   <script type="text/javascript" src="javascript/lib/angular-bootbox.js"></script>
 </head>
@@ -121,7 +121,7 @@
                       <i class="fa fa-inr"></i>
                       <input type="text" class="form-control pay-amount" placeholder="0.0" maxlength="8" ng-model="prepayAmount" ng-disabled="!paymentSelected"> by
                       <input type="date" class="form-control prepay-date-size date-picker-text-indent" id="dateSelectedToEdit" datepicker-popup ng-model="prepay_date" datepicker-options="dateOptions" ng-disabled="!paymentSelected" ng-required="true" />
-                      <input type="text" class="form-control date-time-picker-size time-picker-text-indent" placeholder="Time" id="fromTimeEdit" dn-timepicker ng-model="prepay_time" ng-disabled="!paymentSelected" step="{{slot}}" />
+                      <input type="text" class="form-control date-time-picker-size time-picker-text-indent" placeholder="Time" id="fromTimeEdit" dn-timepicker ng-model="prepay_time" ng-disabled="!paymentSelected" />
                     </div>
                   </div>
                   <!-- Patient div ends here -->
@@ -194,9 +194,9 @@
                   <div class="form-group">
                     <label class="control-label col-sm-3" for="name">Time: *</label>
                     <div class="col-sm-9" id="pre-pay-size">
-                      <input type="text" class="form-control date-time-picker-size time-picker-text-indent" id="fromTimeEdit" dn-timepicker ng-model="startTime" step="{{slot}}" />
+                      <input type="text" class="form-control date-time-picker-size time-picker-text-indent" id="fromTimeEdit" dn-timepicker ng-model="startTime" step="{{slot}}" min-time="{{minTime}}" max-time="{{maxTime}}" />
                       <span class="left-right-margin">TO</span>
-                      <input type="text" class="form-control date-time-picker-size time-picker-text-indent" id="toTimeEdit" dn-timepicker ng-model="endTime" step="{{slot}}" />
+                      <input type="text" class="form-control date-time-picker-size time-picker-text-indent" id="toTimeEdit" dn-timepicker ng-model="endTime" step="{{slot}}" min-time="{{minTime}}" max-time="{{maxTime}}"/>
                     </div>
                   </div>
                   <div class="form-group">
@@ -213,7 +213,7 @@
                       <input type="text" class="form-control pay-amount" placeholder="0.0" maxlength="8" ng-model="prepayAmount" ng-disabled="!paymentSelected"> by
                       <input type="date" class="form-control prepay-date-size date-picker-text-indent" id="dateSelectedToEdit" datepicker-popup ng-model="prepay_date"
                       datepicker-options="dateOptions" ng-disabled="!paymentSelected" ng-required="true" />
-                      <input type="text" class="form-control prepay-time-size time-picker-text-indent" placeholder="Time" id="fromTimeEdit" dn-timepicker ng-model="prepay_time" ng-disabled="!paymentSelected" step="{{slot}}" />
+                      <input type="text" class="form-control prepay-time-size time-picker-text-indent" placeholder="Time" id="fromTimeEdit" dn-timepicker ng-model="prepay_time" ng-disabled="!paymentSelected" />
                     </div>
                   </div>
                   <!-- Patient div ends here -->
@@ -235,9 +235,9 @@
                   <div class="form-group">
                     <label class="control-label col-sm-3" for="name">Time: *</label>
                     <div class="col-sm-9" id="pre-pay-size">
-                      <input type="text" class="date-time-picker-size time-picker-text-indent" id="fromTimeEdit" dn-timepicker ng-model="startTime" step="{{slot}}" />
+                      <input type="text" class="date-time-picker-size time-picker-text-indent" id="fromTimeEdit" dn-timepicker ng-model="startTime" step="{{slot}}" min-time="{{minTime}}" max-time="{{maxTime}}"/>
                       <span class="left-right-margin">TO</span>
-                      <input type="text" class="date-time-picker-size time-picker-text-indent" id="toTimeEdit" dn-timepicker ng-model="endTime" step="{{slot}}" />
+                      <input type="text" class="date-time-picker-size time-picker-text-indent" id="toTimeEdit" dn-timepicker ng-model="endTime" step="{{slot}}" min-time="{{minTime}}" max-time="{{maxTime}}"/>
                     </div>
                   </div>
                   <div class="form-group">
